--- a/LMS/LMS/LMS.csproj
+++ b/LMS/LMS/LMS.csproj
@@ -157,12 +157,14 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\AdminLoginController.cs" />
+    <Compile Include="Controllers\EmployeeController.cs" />
     <Compile Include="Controllers\EmpRegisterController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\RegisteredCoursesController.cs" />
     <Compile Include="Controllers\ShowRegisteredCoursesController.cs" />
     <Compile Include="Controllers\ShowStuAttendenceController.cs" />
     <Compile Include="Controllers\ShowStuInfoController.cs" />
+    <Compile Include="Controllers\StudentController.cs" />
     <Compile Include="Controllers\StuRegisterController.cs" />
     <Compile Include="Controllers\StuReportsController.cs" />
     <Compile Include="Global.asax.cs">
@@ -425,13 +427,13 @@
     <Content Include="Views\Student\Feechallan.cshtml" />
     <Content Include="Views\Student\Attendance.cshtml" />
     <Content Include="Views\Student\Reports.cshtml" />
-    <Content Include="Views\Employee\Reports.cshtml" />
-    <Content Include="Views\Employee\MarkStudnetAttendance.cshtml" />
-    <Content Include="Views\Employee\EmployeeDetails.cshtml" />
     <Content Include="Views\Admin\AddScholarship.cshtml" />
     <Content Include="Views\Admin\ShowStudnet.cshtml" />
     <Content Include="Views\Admin\ShowEmployee.cshtml" />
     <Content Include="Views\Admin\AddFee.cshtml" />
+    <Content Include="Views\Admin\RegisterEmployee.cshtml" />
+    <Content Include="Views\Employee\EmployeeDetails.cshtml" />
+    <Content Include="Views\Student\StudentDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
