--- a/LMS/LMS/bin/LMS.dll.config
+++ b/LMS/LMS/bin/LMS.dll.config
@@ -73,9 +73,10 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    
-  <add name="DB49Entities" connectionString="metadata=res://*/Models.Model15.csdl|res://*/Models.Model15.ssdl|res://*/Models.Model15.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HP-PC\SQLEXPRESS;initial catalog=DB49;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
-    <entityFramework>
+    <add name="DB49Entities" connectionString="metadata=res://*/Models.Model15.csdl|res://*/Models.Model15.ssdl|res://*/Models.Model15.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HP-PC\SQLEXPRESS;initial catalog=DB49;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DB49Entities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-4CTJEVU\SQLEXPRESS;initial catalog=DB49;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
