--- a/LMS/LMS/LMS.csproj
+++ b/LMS/LMS/LMS.csproj
@@ -449,6 +449,7 @@
     <Content Include="Views\Student\ShowFee.cshtml" />
     <Content Include="Views\Admin\UpdateFee.cshtml" />
     <Content Include="Views\Student\UpFeeChallan.cshtml" />
+    <Content Include="Views\Admin\AdminShowUpFeeChallan.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
